# SimQuantum-AMD-Developer-Hackathon

./: .gitattributes  .gitignore  Dockerfile  INTEGRATION.md  LICENSE  PERFORMANCE.md  README.md  app.py  deploy.sh  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml  train.yml
.streamlit/: config.toml
experiments/: ablation_phase2.py  benchmark_phase2.py  diagnose_charge_id.py  diagnose_navigation.py  diagnose_trial.py  train_phase1.py
qdot/agent/: executive.py  narrator.py  translator.py
qdot/core/: governance.py  hitl.py  state.py  types.py
qdot/hardware/: adapter.py  safety.py
qdot/perception/: __init__.py  classifier.py  dataset.py  dqc.py  features.py  inspector.py  ood.py
qdot/planning/: bayesian_opt.py  belief.py  sensing.py  state_machine.py
qdot/simulator/: cim.py
scripts/: triage_phase2.sh
tests/: test_agent.py  test_integration_phase012.py  test_perception.py  test_planning.py  test_safety.py  test_simulator.py  test_state.py  test_types.py
