[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qdot"
version = "0.1.0"
description = "Agentic quantum dot tuning — clean-slate redesign"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Core scientific stack
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    # ML
    "torch>=2.2",
    "torchvision>=0.17",
    "scikit-learn>=1.3",
    "scikit-optimize>=0.9",
    "joblib>=1.3",
    # Computer vision
    "opencv-python>=4.8",
    # Pydantic for data models
    "pydantic>=2.7",
    # Experiment tracking
    "mlflow>=2.15",
    # Plotting
    "plotly>=5.18",
    "matplotlib>=3.8",
    # LLM
    "ibm-watsonx-ai",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]
ui = [
    "gradio>=4.38",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qdot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
